service.yaml
apiVersion: v1
kind: Service
metadata:
  name: key-value-store-service
spec:
  selector:
    app: key-value-store
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
